added pictures, changed <li> to <p>

--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
   <head>
     <meta charset="UTF-8">
     <title>Car wash and detail</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
 
 <body>
     <header>
+        <div class="container">
         <h1> Zurita's detailing </h1>
         <h2>Lavado de paquetes</h2>
     </header>
 
     <section>
-        <p> Basico o de mantenimiento</p>
-        <p> Precios de paquestos de carro basico</p>
-        <p> $60 carro chico $80 carro mediano $100 carro grande</p>
+        <h2> Basico o de mantenimiento</h2>
+        <h3> Precios de paquestos de carro basico</h3>
+        <li> $60 carro chico $80 carro mediano $100 carro grande</li>
 
         <ul>
-            <li> limpieza de interior aspirado. </li>
-            <li> limpieza de tablaro, puertas y vildrios.</li>
-            <li> lavado por fuera y secado, llantas.</li>
+            <p id> limpieza de interior aspirado. </p>
+            <p id> limpieza de tablaro, puertas y vildrios.</p>
+            <p id> lavado de llantas y abrillantador</p>
+            <p id> Lavado y secado a mano. </p>
+            <p id>lavado de llantas y aplicacion de brillo.</p>
+            <p id> Aplicacion de aromatizante.</p>
         </ul>
     </section>
+
+    <section>
+        <p> Detallado (interior) </p>
+    </section>
+    </div>
 </body>
