added pictures to html and added css to them

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
         <h2>Lavado de paquetes</h2>
     </header>
 
-    <section>
+    <section class="features">
+        <h1>Features of past clients</h1>
+        <img src="./assets/css/images/beforeBD.jpg" alt="before back door were cleaned"/>
+        <img src="./assets/css/images/beforeBS.jpg" alt="before back seat were cleaned"/>
+        <img src="./assets/css/images/beforeFS.jpg" alt="before front seat were cleaned"/>
+        <img src="./assets/css/images/afterBD.jpg" alt="after back door were cleaned"/>
+        <img src="./assets/css/images/afterBS.jpg" alt="after back seat were cleaned"/>
+        <img src="./assets/css/images/afterS.jpg" alt="after seats were washed"/>
+        <img src="./assets/css/images/afterCar.jpg" alt="after car were washed"/>
+        <img src="./assets/css/images/afterCR.jpg" alt="after car were washed another angle"/>
+    
+    </section>
+
+    <section class="basic package">
         <h2> Basico o de mantenimiento</h2>
         <h3> Precios de paquestos de carro basico</h3>
         <li> $60 carro chico $80 carro mediano $100 carro grande</li>
@@ -28,9 +41,9 @@
             <p id>lavado de llantas y aplicacion de brillo.</p>
             <p id> Aplicacion de aromatizante.</p>
         </ul>
-    </section>
+    </section>              b
 
-    <section>
+    <section class="medium package">
         <p> Detallado (interior) </p>
     </section>
     </div>
