added nav bar, trying to fix images size

--- a/index.html
+++ b/index.html
@@ -3,48 +3,77 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Car wash and detail</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Car Wash and Detail</title>
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
 
-
-<body>
+  <body>
+    <!-- Header Section -->
     <header>
-        <div class="container">
-        <h1> Zurita's detailing </h1>
+      <div class="container">
+        <h1>Zurita's Detailing</h1>
         <h2>Lavado de paquetes</h2>
+      </div>
     </header>
 
-    <section class="features">
-        <h1>Features of past clients</h1>
-        <img src="./assets/css/images/beforeBD.jpg" alt="before back door were cleaned"/>
-        <img src="./assets/css/images/beforeBS.jpg" alt="before back seat were cleaned"/>
-        <img src="./assets/css/images/beforeFS.jpg" alt="before front seat were cleaned"/>
-        <img src="./assets/css/images/afterBD.jpg" alt="after back door were cleaned"/>
-        <img src="./assets/css/images/afterBS.jpg" alt="after back seat were cleaned"/>
-        <img src="./assets/css/images/afterS.jpg" alt="after seats were washed"/>
-        <img src="./assets/css/images/afterCar.jpg" alt="after car were washed"/>
-        <img src="./assets/css/images/afterCR.jpg" alt="after car were washed another angle"/>
-    
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home">
+      <h1>Welcome to Zurita's Detailing</h1>
+      <p>We offer top-notch car detailing services. Check out our features and pricing!</p>
     </section>
 
-    <section class="basic package">
-        <h2> Basico o de mantenimiento</h2>
-        <h3> Precios de paquestos de carro basico</h3>
-        <li> $60 carro chico $80 carro mediano $100 carro grande</li>
-
-        <ul>
-            <p id> limpieza de interior aspirado. </p>
-            <p id> limpieza de tablaro, puertas y vildrios.</p>
-            <p id> lavado de llantas y abrillantador</p>
-            <p id> Lavado y secado a mano. </p>
-            <p id>lavado de llantas y aplicacion de brillo.</p>
-            <p id> Aplicacion de aromatizante.</p>
-        </ul>
-    </section>              b
-
-    <section class="medium package">
-        <p> Detallado (interior) </p>
+    <!-- Features Section -->
+    <section id="features">
+      <h1>Features of Past Clients</h1>
+      <div class="image-gallery">
+        <img src="./assets/css/images/beforeBD.jpg" alt="Before back door were cleaned" />
+        <img src="./assets/css/images/beforeBS.jpg" alt="Before back seat were cleaned" />
+        <img src="./assets/css/images/beforeFS.jpg" alt="Before front seat were cleaned" />
+        <img src="./assets/css/images/afterBD.jpg" alt="After back door were cleaned" />
+        <img src="./assets/css/images/afterBS.jpg" alt="After back seat were cleaned" />
+        <img src="./assets/css/images/afterS.jpg" alt="After seats were washed" />
+        <img src="./assets/css/images/afterCar.jpg" alt="After car were washed" />
+        <img src="./assets/css/images/afterCR.jpg" alt="After car were washed from another angle" />
+      </div>
     </section>
-    </div>
-</body>
+
+    <!-- Services Section -->
+    <section id="services">
+      <h2>Basico o de Mantenimiento</h2>
+      <h3>Precios de paquetes de carro basico</h3>
+      <ul>
+        <li>$60 Carro chico</li>
+        <li>$80 Carro mediano</li>
+        <li>$100 Carro grande</li>
+      </ul>
+      <h3>Servicios Incluidos:</h3>
+      <ul>
+        <li>Limpieza de interior y aspirado.</li>
+        <li>Limpieza de tablaro, puertas y vidrios.</li>
+        <li>Lavado de llantas y aplicación de abrillantador.</li>
+        <li>Lavado y secado a mano.</li>
+        <li>Lavado de llantas y aplicación de brillo.</li>
+        <li>Aplicación de aromatizante.</li>
+      </ul>
+    </section>
+
+    <!-- Contact Section (Placeholder) -->
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p>Get in touch with us for more details or to book an appointment!</p>
+    </section>
+
+  </body>
+
+</html>
