fixed picture display. fixing h1 font

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="container">
         <h1>Zurita's Detailing</h1>
-        <h2>Lavado de paquetes</h2>
+        <!-- <h2>Lavado de paquetes</h2> -->
       </div>
     </header>
 
@@ -29,13 +29,13 @@
 
     <!-- Home Section -->
     <section id="home">
-      <h1>Welcome to Zurita's Detailing</h1>
-      <p>We offer top-notch car detailing services. Check out our features and pricing!</p>
+      <p>Welcome to Zurita's Detailing, we offer top-notch car detailin</p>
+      <!-- <p>We offer top-notch car detailin</p> -->
     </section>
 
     <!-- Features Section -->
     <section id="features">
-      <h1>Features of Past Clients</h1>
+      <h2>Features of Past Clients</h2>
       <div class="image-gallery">
         <img src="./assets/css/images/beforeBD.jpg" alt="Before back door were cleaned" />
         <img src="./assets/css/images/beforeBS.jpg" alt="Before back seat were cleaned" />
